// proto文件语法版本
syntax = "proto3";

// 指定生成的go文件所在的目录
// 分隔符使用;符号
// 指定包名称
option go_package = ".;testrpc";

// 方法名称
service PushRequest {
    rpc PushRequest(PushReqArgs) returns (PushRespArgs) {}
}

// 请求参数
message PushReqArgs {
    string Room = 1;
    string User = 2;
    string Type = 3;
    string Msg  = 4;
}

// 响应参数
message PushRespArgs {
    int32  Code = 1;
    string Msg  = 2;
}